<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="schedule"
            type="com.ayushman.vaccinenotifier.domain.Schedule" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardElevation="10dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/list_grey"
            android:layout_marginHorizontal="@dimen/heading_margin"
            android:layout_marginVertical="@dimen/little_spacing_margin"
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/illustration_medication"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/illustration_medical"
                    android:layout_margin="@dimen/spacing_margin"
                    android:layout_width="100dp"
                    android:layout_height="130dp"
                    android:contentDescription="@string/null_value" />

                <LinearLayout
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/illustration_medication"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/center_name"
                        app:centerName="@{schedule}"
                        android:text="@string/centername"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:layout_margin="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/pincode"
                        app:centerPincode="@{schedule}"
                        android:text="@string/pin_000000"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_margin="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/vaccine_date"
                        app:date="@{schedule}"
                        android:text="@string/_19_05_2021"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_margin="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/min_age"
                        app:minAge="@{schedule}"
                        android:text="@string/minimum_age_18"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_margin="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/capacityDose1"
                        app:capacityDose1="@{schedule}"
                        android:text="@string/capacity_18"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_margin="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/capacityDose2"
                        app:capacityDose2="@{schedule}"
                        android:text="@string/capacity_18"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_margin="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />


                    <TextView
                        android:id="@+id/vaccine_name"
                        app:vaccineName="@{schedule}"
                        android:text="@string/covaxin"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_margin="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>