<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="district"
            type="com.ayushman.vaccinenotifier.domain.District" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/round_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/heading"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/confirm_your_location"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginHorizontal="@dimen/heading_margin"
            android:layout_marginVertical="@dimen/heading_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:id="@+id/district_details"
            app:layout_constraintTop_toBottomOf="@id/heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/list_grey"
            android:layout_marginHorizontal="@dimen/heading_margin"
            android:layout_marginVertical="@dimen/heading_margin"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <LinearLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <ImageView
                    android:layout_marginHorizontal="@dimen/little_spacing_margin"
                    android:contentDescription="@string/null_value"
                    android:src="@drawable/illustration_district"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/little_spacing_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/district_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/little_spacing_margin"
                        android:layout_marginVertical="4dp"
                        android:maxLines="1"
                        app:districtName="@{district}"
                        android:text="@string/district_name"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/state_name"
                        android:layout_marginVertical="4dp"
                        android:layout_marginHorizontal="@dimen/little_spacing_margin"
                        app:districtStateName="@{district}"
                        android:text="@string/state_name"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_confirm"
            app:layout_constraintTop_toBottomOf="@+id/district_details"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/primary_blue"
            android:layout_marginVertical="@dimen/heading_margin"
            android:layout_marginHorizontal="70dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>