<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragmentDashboard.FragmentDashboard">

        <TextView
            android:id="@+id/header"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/heading_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/location_text"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="@dimen/heading_margin"
            android:text="@string/location"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/heading_notification"
            app:layout_constraintTop_toTopOf="@id/header"
            app:layout_constraintBottom_toBottomOf="@id/header"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/notifications"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_margin="@dimen/spacing_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/notification_switch"
            app:layout_constraintTop_toTopOf="@id/location_text"
            app:layout_constraintBottom_toBottomOf="@id/location_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:thumbTint="@color/primary_blue"
            android:layout_margin="@dimen/heading_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/schedule_recycler_view"
            app:layout_constraintTop_toBottomOf="@+id/location_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="@dimen/heading_margin"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/refresh_button"
            app:layout_constraintBottom_toTopOf="@id/change_location_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/primary_blue"
            android:src="@drawable/ic_baseline_refresh_24"
            android:layout_margin="@dimen/heading_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/null_value"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/change_location_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/little_spacing_margin"
            android:text="@string/change_location_text"
            android:textColor="@color/white"
            android:drawableStart="@drawable/ic_baseline_edit_location_24"
            android:backgroundTint="@color/primary_blue"
            android:layout_margin="@dimen/heading_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/null_value"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/error_layout"
            app:layout_constraintTop_toBottomOf="@id/location_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            android:layout_margin="@dimen/heading_margin"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/error_illustration"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/error_text"
                android:src="@drawable/illustration_error"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/null_value"/>

            <TextView
                android:id="@+id/error_text"
                app:layout_constraintTop_toBottomOf="@id/error_illustration"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/error_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/empty_layout"
            app:layout_constraintTop_toBottomOf="@id/location_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            android:layout_margin="@dimen/heading_margin"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <ImageView
                android:id="@+id/empty_illustration"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/empty_text"
                android:src="@drawable/illustration_empty"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/null_value"/>

            <TextView
                android:id="@+id/empty_text"
                app:layout_constraintTop_toBottomOf="@id/empty_illustration"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/empty_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>