<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        
        <variable
            name="state"
            type="com.ayushman.vaccinenotifier.domain.State" />

        <variable
            name="clickListener"
            type="com.ayushman.vaccinenotifier.recyclerViewAdapters.StateClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:onClick="@{() -> clickListener.onClick(state)}"
        android:layout_width="match_parent"
        android:layout_height="90dp">
        
        <androidx.cardview.widget.CardView
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="15dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/list_grey"
            android:layout_marginHorizontal="@dimen/spacing_margin"
            android:layout_marginVertical="@dimen/little_spacing_margin"
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <LinearLayout
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <ImageView
                    android:layout_marginHorizontal="@dimen/little_spacing_margin"
                    android:contentDescription="@string/null_value"
                    android:src="@drawable/illustration_town"
                    android:layout_width="60dp"
                    android:layout_height="60dp"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/little_spacing_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/state_name"
                        android:layout_marginVertical="4dp"
                        android:layout_marginHorizontal="@dimen/little_spacing_margin"
                        stateName="@{state}"
                        android:text="@string/state_name"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/country_name"
                        android:layout_marginVertical="4dp"
                        android:layout_marginHorizontal="@dimen/little_spacing_margin"
                        app:countryName="@{state}"
                        android:text="@string/country_name"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:textStyle="normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
